fixed text alignment at title

--- a/Webfejlesztés/LiftR_page/css/wo_styles.css
+++ b/Webfejlesztés/LiftR_page/css/wo_styles.css
@@ -1,4 +1,16 @@
+.title_container {
+  display: inline-block;
+}
 
+#tartalom {
+  text-align: left;
+}
+#guarantee-aside-top h6 {
+  text-align: right;
+ /* Adjust this value as needed */
+}
+
+/* Example media query for screens smaller than 600px */
 
 
 table caption {
